# xStarbound

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Install.cmake  PackXSBAssets.cmake  README.md  automate-vcpkg.cmake  flake.nix  garnix.yaml  vcpkg-configuration.json  vcpkg.json
doc/: OPENSOURCE.md  (+3 more)
source/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
source/application/: CMakeLists.txt  StarApplicationController.hpp  StarMainApplication.hpp  StarMainApplication_sdl.cpp  StarP2PNetworkingService_pc.cpp  StarPlatformServices_pc.hpp  StarRenderer.cpp  StarRenderer_opengl20.cpp
source/application/steam/: CMakeLists.txt  StarDesktopService_pc_steam.cpp  StarDesktopService_pc_steam.hpp  StarStatisticsService_pc_steam.hpp  StarUserGeneratedContentService_pc_steam.hpp
source/base/: CMakeLists.txt  StarAssets.cpp  StarAssets.hpp  StarCellularLightArray.hpp  StarCellularLighting.cpp  StarCellularLighting.hpp  StarMemoryAssetSource.cpp  StarMemoryAssetSource.hpp  StarMixer.cpp  StarVersion.cpp.in  StarVersion.hpp  StarVersionOptionParser.cpp  StarWorldGeometry.cpp
source/base/scripting/: StarImageLuaBindings.cpp  StarImageLuaBindings.hpp
source/client/: CMakeLists.txt  StarClientApplication.cpp  StarClientApplication.hpp  xclient.rc  xclient.rc.in
source/core/: CMakeLists.txt  StarAStar.hpp  StarAlgorithm.hpp  StarAssetPath.cpp  StarAudio.cpp  StarBTree.hpp  StarBTreeDatabase.cpp  StarBTreeDatabase.hpp  StarBlockAllocator.hpp  StarByteArray.cpp  StarCurve25519.cpp  StarDirectives.cpp  StarDirectives.hpp  StarException.hpp  StarException_unix.cpp  StarException_windows.cpp  StarFile_unix.cpp  StarFlatHashMap.hpp  StarFlatHashTable.hpp  StarFont.cpp  StarFont.hpp  StarImage.cpp  StarImage.hpp  StarImageProcessing.cpp  StarImageProcessing.hpp  StarInputEvent.cpp  StarJson.cpp  StarJson.hpp  StarJsonBuilder.cpp  StarJsonExtra.cpp  StarJsonExtra.hpp  StarJsonParser.hpp  StarJsonPatch.cpp  StarJsonPatch.hpp  StarJsonPath.hpp  StarList.hpp  StarLua.cpp  StarLua.hpp  StarMaybe.hpp  StarMemory.cpp  (+21 more)
source/core/scripting/: StarUtilityLuaBindings.cpp  StarUtilityLuaBindings.hpp
source/frontend/: CMakeLists.txt  StarActionBar.cpp  StarAiInterface.hpp  StarBaseScriptPane.cpp  StarBaseScriptPane.hpp  StarBindingsMenu.cpp  StarCharCreation.cpp  StarCharCreation.hpp  StarCharSelection.cpp  StarCharSelection.hpp  StarChat.cpp  StarChat.hpp  StarChatBubbleManager.cpp  StarChatBubbleManager.hpp  StarCinematic.cpp  StarClientCommandProcessor.cpp  StarClientCommandProcessor.hpp  StarConfirmationDialog.cpp  StarContainerInterface.cpp  StarContainerInterface.hpp  StarCraftingInterface.cpp  StarErrorScreen.cpp  StarGraphicsMenu.cpp  StarGraphicsMenu.hpp  StarInterfaceLuaBindings.cpp  StarInterfaceLuaBindings.hpp  StarInventory.cpp  StarInventory.hpp  StarItemTooltip.cpp  StarKeybindingsMenu.cpp  StarMainInterface.cpp  StarMainInterface.hpp  StarMainInterfaceTypes.cpp  StarMainInterfaceTypes.hpp  StarMainMixer.cpp  StarMainMixer.hpp  StarMerchantInterface.cpp  StarModsMenu.cpp  StarOptionsMenu.cpp  StarOptionsMenu.hpp  (+16 more)
source/game/: CMakeLists.txt  StarActorMovementController.cpp  StarActorMovementController.hpp  StarArmorWearer.cpp  StarArmorWearer.hpp  StarBehaviorDatabase.cpp  StarBehaviorState.cpp  StarChatProcessor.cpp  StarChatProcessor.hpp  StarChatTypes.cpp  StarChatTypes.hpp  StarClientContext.cpp  StarCodex.cpp  StarCodex.hpp  StarCodexDatabase.cpp  StarCommandProcessor.cpp  StarCommandProcessor.hpp  StarDungeonGenerator.cpp  StarDungeonGenerator.hpp  StarEntityFactory.cpp  StarEntityMap.cpp  StarEntityMap.hpp  StarEntityRendering.hpp  StarEntityRenderingTypes.hpp  StarGameTimers.hpp  StarGameTypes.cpp  StarGameTypes.hpp  StarHumanoid.cpp  StarHumanoid.hpp  StarImageMetadataDatabase.cpp  StarImageMetadataDatabase.hpp  StarInput.cpp  StarInterpolationTracker.cpp  StarInventoryTypes.cpp  StarInventoryTypes.hpp  StarItem.cpp  StarItem.hpp  StarItemBag.cpp  StarItemBag.hpp  StarItemDatabase.cpp  (+103 more)
source/game/interfaces/: CMakeLists.txt  StarBeamItem.cpp  StarBeamItem.hpp  StarEntity.cpp  StarEntity.hpp  StarFireableItem.cpp  StarScriptedEntity.hpp  StarSwingableItem.cpp  StarSwingableItem.hpp  StarTileEntity.hpp  StarWorld.cpp  StarWorld.hpp
source/json_tool/: CMakeLists.txt  editor_gui.cpp  json_tool.cpp
source/mod_uploader/: CMakeLists.txt  StarModUploader.cpp  StarModUploader.hpp  main.cpp
source/platform/: CMakeLists.txt  StarDesktopService.hpp
source/rendering/: CMakeLists.txt  StarAssetTextureGroup.cpp  StarDrawablePainter.cpp  StarEnvironmentPainter.cpp  StarFontTextureGroup.cpp  StarFontTextureGroup.hpp  StarTextPainter.cpp  StarTextPainter.hpp  StarTilePainter.cpp  StarTilePainter.hpp  StarWorldCamera.cpp  StarWorldCamera.hpp  StarWorldPainter.cpp  StarWorldPainter.hpp
source/server/: CMakeLists.txt  StarServerRconThread.cpp  main.cpp
source/test/: CMakeLists.txt  StarTestUniverse.cpp  btree_test.cpp  game_tests_main.cpp  lua_test.cpp  string_test.cpp
source/utility/: CMakeLists.txt  asset_packer.cpp  asset_unpacker.cpp  btree_repacker.cpp  dump_versioned_json.cpp  dungeon_generation_benchmark.cpp  fix_embedded_tilesets.cpp  game_repl.cpp  generation_benchmark.cpp  make_versioned_json.cpp  map_grep.cpp  planet_mapgen.cpp  render_terrain_selector.cpp  update_tilesets.cpp  word_count.cpp  world_benchmark.cpp
source/windowing/: CMakeLists.txt  StarButtonGroup.cpp  StarCanvasWidget.cpp  StarGuiContext.cpp  StarGuiContext.hpp  StarImageStretchWidget.cpp  StarImageStretchWidget.hpp  StarItemGridWidget.cpp  StarItemGridWidget.hpp  StarItemSlotWidget.cpp  StarItemSlotWidget.hpp  StarLabelWidget.cpp  StarLargeCharPlateWidget.cpp  StarLargeCharPlateWidget.hpp  StarListWidget.cpp  StarPane.cpp  StarPane.hpp  StarPaneManager.cpp  StarPaneManager.hpp  StarPortraitWidget.cpp  StarRegisteredPaneManager.hpp  StarScrollArea.cpp  StarScrollArea.hpp  StarSliderBar.cpp  StarSliderBar.hpp  StarTabSet.cpp  StarTextBoxWidget.cpp  StarTextBoxWidget.hpp  StarWidget.cpp  StarWidget.hpp  StarWidgetLuaBindings.cpp  StarWidgetParsing.cpp  StarWidgetParsing.hpp
(+265 files in other folders)
